Update SDK to v1.0.5
* In-App notification banner is now shown when push notification is disabled and a message arrives
* SDK now uses tint color instead of images for Navigation bar
* Fixed alignment issue when scrolling on Category and Channel views
* New theme entry to customize status bar ( can be set to UIStatusBarStyleLightContent )
* Minor UI fixes and enhancements.

--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,15 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.0.4
+Version         : 1.0.5
+
+Ver 1.0.5 
+__________________________
+In-App notification banner is now shown when push notification is disabled and a message arrives
+SDK now uses tint color instead of images for Navigation bar
+Fixed alignment issue when scrolling on Category and Channel views
+New theme entry to customize status bar ( can be set to UIStatusBarStyleLightContent )  
+Minor UI fixes and enhancements. 
 
 Ver 1.0.4 
 __________________________
