--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,11 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.0.8
+Version         : 1.0.9
+
+Ver 1.0.9 
+__________________________
+Fix duplicate symbol error
 
 Ver 1.0.8 
 __________________________
