--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,12 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.0.9
+Version         : 1.0.10
+
+Ver 1.0.10 
+__________________________
+Fix 24 hour time alignment issue 
+Fix jitter in channel view
 
 Ver 1.0.9 
 __________________________
