--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,11 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.0.12
+Version         : 1.0.13
+
+Ver 1.0.13 
+__________________________
+Add Statusbar customization
 
 Ver 1.0.12 
 __________________________
@@ -11,7 +15,7 @@ Fixed Headsup Notification popping up when Push is disabled
 Ver 1.0.11 
 __________________________
 Improved message fetch 
-Fixed error for property updates 
+Fixed crashes for property updates 
 Minor UI Fixes 
 
 Ver 1.0.10 
