--- a/HotlineSDK/HLLocalization/en.lproj/HLLocalizable.strings
+++ b/HotlineSDK/HLLocalization/en.lproj/HLLocalizable.strings
@@ -6,7 +6,7 @@
 */
 
 /* Solution Categories*/
-"faq_title_text"="HELP DESK";
+"faq_title_text"="Help Desk";
 "faq_close_button_text"="Close";
 "contact_us_button_text"="Chat with Us";
 
