--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,11 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.1.4
+Version         : 1.1.5
+
+Ver 1.1.5 
+__________________________
+Exception for Media permission check removed
 
 Ver 1.1.4 
 __________________________
