--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,11 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.1.6
+Version         : 1.1.7
+
+Ver 1.1.7 
+__________________________
+didStartPlaying API reference removed. This internal API had a name conflict with Apple's private API causing app store submission to be rejected
 
 Ver 1.1.6 
 __________________________
