--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,11 +2,19 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.1.8
+Version         : 1.1.9
+
+Ver 1.1.9 
+__________________________
+Added ability to change background color for chat/conversation screen
+Model will now show human friendly model name on the device info.
+Fixed an issue where messages retries were failing.
+Fixed issue with back button when there is only one channel.
+Memory leaks and performance fixes
 
 Ver 1.1.8 
 __________________________
-Missing media usage description disables picture and voice messaging on iOS10. This used to crash earlier on iOS10. 
+Missing media usage description disables picture and voice messaging on iOS10. This used to crash earlier on iOS10. Refer Docs for more info
 Minor fixes and logging added
 
 Ver 1.1.7 
