--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,17 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.1.10
+Version         : 1.2.0
+
+Ver 1.2.0 
+__________________________
+Release Notes:
+- Customer satisfaction survey feature
+- Allow theme file name with .plist extension 
+- Fixed issue with edge swipe on the conversation screen
+- Fixed jitter on search results. 
+- Fixed Audio issue for App that play background music 
+- Minor fixes and Improvements.
 
 Ver 1.1.10 
 __________________________
