Update SDK to v1.2.1
Signed-off-by: AravinthChandran <arvinthchandran@gmail.com>

--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,17 +2,24 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.2.0
+Version         : 1.2.1
+
+Ver 1.2.1 
+__________________________
+In app Notification banner now shows CSAT notification when push notification is disabled. 
+CSAT question can now support a larger question/text. 
+Unread count now includes pending CSAT responses.
+Better loading messages to inform users for Channels and FAQs list.
+Minor fixes and improvements.
 
 Ver 1.2.0 
 __________________________
-Release Notes:
-- Customer satisfaction survey feature
-- Allow theme file name with .plist extension 
-- Fixed issue with edge swipe on the conversation screen
-- Fixed jitter on search results. 
-- Fixed Audio issue for App that play background music 
-- Minor fixes and Improvements.
+Customer satisfaction survey feature
+Allow theme file name with .plist extension 
+Fixed issue with edge swipe on the conversation screen
+Fixed jitter on search results. 
+Fixed Audio issue for App that play background music 
+Minor fixes and Improvements.
 
 Ver 1.1.10 
 __________________________
