--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,11 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://hotline.freshdesk.com/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.3.0
+Version         : 1.3.1
+
+Ver 1.3.1 
+__________________________
+Fix poller when push notification doesn't work. 
 
 Ver 1.3.0 
 __________________________
