--- a/HotlineSDK/ReleaseNotes.txt
+++ b/HotlineSDK/ReleaseNotes.txt
@@ -2,7 +2,13 @@ Hotline iOS SDK - Powered by Freshdesk
 
 Documentation   : https://support.hotline.io/support/solutions
 Support Email   : support@hotline.io 
-Version         : 1.3.5
+Version         : 1.3.6
+
+Ver 1.3.6 
+__________________________
+Fixed banner text refresh with `updateConversationBannerMessage` API.
+Fixed theming issue with `clearUserData` API.
+Fixed misplaced text in image with text message in Conversation UI
 
 Ver 1.3.5 
 __________________________
